--- a/zh-CN/index.html
+++ b/zh-CN/index.html
@@ -4,5 +4,5 @@ title: 首页
 ---
 
 
-<h2>欢迎来到CoffeeScript私房菜！</h2>
-<p>CoffeeScript私房菜为社区而生，同时也是社区的杰作。看看你能不能做点啥，到<a href="/contributing">贡献</a>页看看呐！</p>
+<h2>欢迎来到CoffeeScript Cookbook！</h2>
+<p>CoffeeScript Cookbook为社区而生，同时也是社区的杰作。看看你能不能做点啥，到<a href="/contributing">贡献</a>页看看呐！</p>
