--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: 首页
 
 
 <h2>欢迎来到CoffeeScript Cookbook！</h2>
-<p>CoffeeScript Cookbook因社区而生，同时也因社区而得以发展。看看你能不能做点啥，到<a href="/contributing">贡献</a>页看看呐！</p>
+<p>CoffeeScript Cookbook因社区而生，同时也因社区而得以发展。看看你能不能做点啥，到<a href="./contributing">贡献</a>页看看呐！</p>
